--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,7 +12,7 @@ on:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'Start building'
         # Default value if no value is explicitly provided
-        default: 'World'
+        default: 'ISO'
         # Input has to be provided for the workflow to run
         required: true
         # The data type of the input
