--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,5 +11,4 @@ updates:
       interval: "daily"
     reviewers:
       - "justaguy31"
-    target-branch:
-      - "main"
+    target-branch: "main"
