--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,3 +33,6 @@ jobs:
         pacman -Syu --noconfirm
         git clone https://github.com/justaguy31/archiso-lfs.git
         cd archiso-lfs/baseline
+    - name: build-iso
+      run:
+        mkarchiso -v .
