--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,11 +28,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
-    - name: download-profile
+   # - name: download-profile
+     # run: |
+       # sudo pacman -Syu --noconfirm
+       # git clone https://github.com/justaguy31/archiso-lfs.git
+       # cd archiso-lfs/baseline
+    - name: build-iso
       run: |
         sudo pacman -Syu --noconfirm
-        git clone https://github.com/justaguy31/archiso-lfs.git
-        cd archiso-lfs/baseline
-    - name: build-iso
-      run:
         mkarchiso -v .
