--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,15 +28,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
-   # - name: download-profile
-     # run: |
-       # sudo pacman -Syu --noconfirm
-       # git clone https://github.com/justaguy31/archiso-lfs.git
-       # cd archiso-lfs/baseline
-    - name: build-iso
+    - name: download-profile
       run: |
         pacman -Syu --noconfirm
-        cd ..
-        # wtf? why make an empty dir with the same name?
+        git clone https://github.com/justaguy31/archiso-lfs.git
+        cd archiso-lfs/baseline
+    - name: build-iso
+      run: |
         rm -r archiso-lfs
         mkarchiso -v ./baseline
