forgot to remove this
Signed-off-by: justaguy31 <124162278+justaguy31@users.noreply.github.com>

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,6 +34,5 @@ jobs:
         git clone https://github.com/justaguy31/archiso-lfs.git
         cd archiso-lfs/baseline
     - name: build-iso
-      run: |
-        rm -r archiso-lfs
+      run:
         mkarchiso -v ./baseline
