--- a/baseline/syslinux/syslinux-linux.cfg
+++ b/baseline/syslinux/syslinux-linux.cfg
@@ -12,4 +12,4 @@ APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archisouuid=%AR
 
 LABEL memtest
 MENU LABEL Memtest86+
-LINUX /%INSTALL_DIR%/boot/memtest86+/memtest.bin
+LINUX /%INSTALL_DIR%/boot/memtest
