--- a/baseline/grub/grub.cfg
+++ b/baseline/grub/grub.cfg
@@ -41,3 +41,16 @@ menuentry "Arch Linux (x86_64, UEFI) Copy to RAM" --class arch --class gnu-linux
     linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archisouuid=%ARCHISO_UUID% %CRYPTO_PARAMS% copytoram
     initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
+
+if [ "${grub_platform}" == 'efi' -a "${grub_cpu}" == 'x86_64' -a -f '/boot/memtest86+/memtest.efi' ]; then
+    menuentry "Memtest86+ (RAM test)" --class memtest86 --class memtest --class gnu --class tool {
+        set gfxpayload=800x600,1024x768
+        linux /boot/memtest86+/memtest.efi
+    }
+fi
+if [ "${grub_platform}" == 'pc' -a -f '/boot/memtest86+/memtest' ]; then
+    menuentry 'Memtest86+ (RAM test)' --class memtest86 --class memtest --class gnu --class tool {
+        set gfxpayload=800x600,1024x768
+        linux /boot/memtest86+/memtest
+    }
+fi
