--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,10 +30,10 @@ jobs:
     # Runs a single command using the runners shell
     - name: download-profile
       run: |
-        pacman -Syu --noconfirm
+        pacman -Syu --noconfirm --color always
         cd ..
         rm -r archiso-lfs
-        git clone https://github.com/justaguy31/archiso-lfs.git
+        git clone --verbose https://github.com/justaguy31/archiso-lfs.git
         cd archiso-lfs/releng
     - name: build-iso
       run:
