--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,7 +21,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "archbuild"
-  baseline_iso:
+  releng_iso:
     # The type of runner that the job will run on
     runs-on: self-hosted
 
