--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         pacman -Syu --noconfirm --color always
         cd ..
+        pwd
         ls -a
         git pull
         cd archiso-lfs/releng
