--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,5 +34,8 @@ jobs:
         git pull
     - name: build-iso
       run: |
-        rm -r -f ./work
+        cd ./work
+        shopt -s extglob
+        rm -r !("x86_64")
+        cd ..
         mkarchiso -v ./releng
